# mothership

./: Dockerfile  Procfile  README.md  pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  api.ts
frontend/src/components/: BotForm.tsx  BotStatus.tsx  Footer.tsx  GoogleAnalytics.tsx  Header.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: DashboardPage.tsx  IndexPage.tsx  LoginPage.tsx  SignupPage.tsx
mothership/: app.py  bot.py  frontend.py  models.py  run_bot.py
mothership/migrations/versions/: 26fd41debd46_.py  3c05ce7f40d6_.py  a1fd7486141b_made_some_stuff_mandatory.py  a39260dbe3ac_.py
tests/: collection.json
