[tool.poetry]
name = "mothership"
version = "0.1.0"
description = ""
authors = ["Gyanendra Mishra <anomaly.the@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
streamlit = "^1.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
