[tool.poetry]
name = "mothership"
version = "0.1.0"
description = ""
authors = ["Gyanendra Mishra <anomaly.the@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-jwt-extended = "^4.6.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
requests = "^2.32.3"
flask-cors = "^4.0.1"
stripe = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
